[metadata]
name = IssuerGHAction
version = 0.0.1
author = KOLANICH
url = https://gitlab.com/KOLANICH/issuer
description = A GitHub Action automating self-management of issues by their creators.
long_description = file: ReadMe.md
keywords = open source, ideas
license = Unlicense
classifiers =
	Programming Language :: Python
	Programming Language :: Python :: 3
	Development Status :: 4 - Beta
	Environment :: Other Environment
	Intended Audience :: Developers
	License :: Public Domain
	License :: Public Domain :: Unlicense
	Operating System :: OS Independent
	Topic :: Software Development :: Libraries :: Python Modules
	Topic :: Text Processing

[options]
python_requires = >=3.4
zip_safe = True
include_package_data = True
packages = IssuerGHAction
setup_requires = setuptools; setuptools_scm @ git+https://github.com/pypa/setuptools_scm.git
install_requires =
  commonmark @ git+https://github.com/readthedocs/commonmark.py
  recommonmark @ git+https://github.com/readthedocs/recommonmark.git
  docutils
  #urllib3[secure] @ git+https://github.com/urllib3/urllib3.git
  requests @ git+https://github.com/psf/requests.git
  python-dateutil @ git+https://github.com/dateutil/dateutil.git
  ruamel.yaml @ hg+https://bitbucket.org/ruamel/yaml

  #gql @ git+https://github.com/graphql-python/gql.git
  # its deps
  #graphql-core @ git+https://github.com/graphql-python/graphql-core.git
  #rxpy @ git+https://github.com/ReactiveX/RxPY.git
  #promise @ git+https://github.com/syrusakbary/promise.git


[options.extras_require]
warnings = python-crontab @ https://gitlab.com/doctormo/python-crontab.git


[options.entry_points]
console_scripts = IssuerGHAction = IssuerGHAction.__main__:main


[build-system]
requires = ["setuptools", "setuptools_scm", "wheel"]
